SERVER-68139: Test resharding success with limited memory

(cherry picked from commit 901ce6eed061d21df66d82ded539d294da6d3de4)